--- a/war/index.html
+++ b/war/index.html
@@ -20,7 +20,7 @@
         <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
       </tr>
       <tr>
-        <td><a href="java_project">Java_Project</a></td>
+        <td><a href="java_project">Exercise 02 - Math</a></td>
       </tr>
     </table>
   </body>
