--- a/war/index.html
+++ b/war/index.html
@@ -22,8 +22,13 @@
       <tr>
         <td><a href="java_project">Exercise 02 - Math</a></td>
       </tr>
+      
        <tr>
         <td><a href="mynewservlet">Exercise 03 - Advanced Math</a></td>
+      </tr>
+      
+       <tr>
+        <td><a href="stockdetails">Exercise 04 - Stock Details</a></td>
       </tr>
     </table>
   </body>
